# nlp-project

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/: exception.py
