[tool.poetry]
name = "nlp-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "nlp_project"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
numpy = "^1.24.2"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
